# IssuetrakAPI

./: .gitignore  IssuetrakAPI.py  IssuetrakAPIv1.py  IssuetrakAPIv2.py  LICENSE  README.md  code42.py  setup.cfg  setup.py  test_file.py
IssuetrakAPI/: IssuetrakAPI.py  __init__.py  api_common_classes.py  api_connector.py  api_data_transfer_objects.py  api_definitions.py  api_exceptions.py  causes.py  classes.py  client.py  departments.py  issues.py  locations.py  menu.py  meta.py  organizations.py  priorities.py  projects.py  service_levels.py  substatuses.py  time_zones.py  user_defined_field_types.py  utils.py
