[metadata]
name = IssuetrakAPI
version = 0.0.1
author = Will McElhenney
author_email = whm0004@auburn.edu
description = A (unofficial) package for making API calls to Issuetrak API v2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WillMc93/IssuetrakAPI.git
project_urls =
    Bug Tracker = https://github.com/WillMc93/IssuetrakAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
